chore: added RabbitConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=complaint_management
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.rabbitmq.addresses=${RABBITMQ_URL}
+spring.rabbitmq.ssl.enabled=true
+
+respuesta.archivos.max-size=2097152 
+
+respuesta.appeal-days=10
+
+rabbitmq.exchange=pdau.exchange
+rabbitmq.routing-key=respuesta.registrada
+rabbitmq.queue=pdau.respuestas.queue
